// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddLabelsForm > render > should render a base action 1`] = `ShallowWrapper {}`;

exports[`AddLabelsForm > updates > should allow switching from router > switch from router 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "labels": [
          {
            "id": "feedback_label",
            "name": "Feedback",
            "type": "label",
          },
        ],
        "type": "add_input_labels",
        "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`AddLabelsForm > updates > should update and save > update label 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "labels": [
          {
            "id": "feedback_label",
            "name": "Feedback",
            "type": "label",
          },
        ],
        "type": "add_input_labels",
        "uuid": "aa15ef19-da81-43d0-b6e5-84b47216aeb8",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`AddLabelsForm > updates > should update and save 1`] = `
{
  "labels": {
    "validationFailures": [],
    "value": [
      {
        "id": "feedback_label",
        "name": "Feedback",
        "type": "label",
      },
    ],
  },
  "valid": true,
}
`;
